# mindmeld

./: TODO.md  pyproject.toml
.github/workflows/: python-package.yml
src/mindmeld/: eval.py  inference.py  optimize.py  runner.py
src/mindmeld/metrics/: answer_relevance.py  answer_similarity.py  echo.py  faithfulness.py  llm_judge.py  shorten_prompt_length.py
tests/: conftest.py  test_eval.py  test_inference.py  test_llm_judge.py  test_provider.py  test_runner.py
tests/metrics/: test_answer_relevance.py  test_answer_similarity.py  test_faithfulness.py  test_llm_judge.py
