[project]
name = "mindmeld"
version = "0.1.0"
description = "A framework to glue all your AI tools together"
authors = [
    {name = "Todd Cullen", email = "todd@100-x.ai"},
]
dependencies = [
    "pydantic>=2.9.2",
    "instructor>=1.5.0",
    "numpy>=2.1.1",
    "sentence-transformers>=3.1.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.3.3",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

